COMP: Mark FSL conforming flags as advanced
The cmake flags used to affect conforming to FSL
standard behavior are marked as advanced to keep them
hidden by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,8 +54,11 @@ option( BUILD_SHARED_LIBS "Toggle building shared libraries." OFF)
 if(NOT FSLSTYLE)
   # If FSL_STYLE is not defined, then
   option( FSLSTYLE_NAME_CONFLICTS "FSL behavior for name conflicts (generate error if both img.nii and img.nii.gz exists)" OFF)
+  mark_as_advanced(FSLSTYLE_NAME_CONFLICTS)
   option( FSLSTYLE_PIGZ_SUPPORT   "PIGZ: Use PIGZ parallel compression if environment includes AFNI_COMPRESSOR=PIGZ" OFF)
+  mark_as_advanced(FSLSTYLE_PIGZ_SUPPORT)
   option( FSLSTYLE_REJECT_COMPLEX "REJECT_COMPLEX: Generate error if file is complex datatype." OFF)
+  mark_as_advanced(FSLSTYLE_REJECT_COMPLEX)
 else()
   set(FSLSTYLE_NAME_CONFLICTS ON CACHE BOOL "FSL behavior for name conflicts (ambiguous files img.nii and img.nii.gz is an error)" FORCE)
   set(FSLSTYLE_PIGZ_SUPPORT   ON CACHE BOOL "PIGZ support" FORCE)
